// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1;

option java_outer_classname = "ExperimentalFeaturesOuterClass";
option java_package = "com.daml.ledger.api.v1";
option csharp_namespace = "Com.Daml.Ledger.Api.V1";

/*
 IMPORTANT: in contrast to other parts of the Ledger API, only json-wire backwards
            compatibility guarantees are given for the messages in this file.
*/

// See the feature message definitions for descriptions.
message ExperimentalFeatures {
  ExperimentalSelfServiceErrorCodes self_service_error_codes = 1;
  ExperimentalStaticTime static_time = 2;
  CommandDeduplicationFeatures command_deduplication = 3;
}

// GRPC self-service error codes are returned by the Ledger API.
message ExperimentalSelfServiceErrorCodes {}

// Ledger is in the static time mode and exposes a time service.
message ExperimentalStaticTime {}

// Command deduplication feature descriptors used for testing
//
// KV ledger configuration:
//  deduplication_period_support {
//    offset_support = OFFSET_CONVERT_TO_DURATION
//    duration_support = DURATION_NATIVE_SUPPORT
//  }
//  deduplication_type = ASYNC
//
// Canton configuration:
//  deduplication_period_support {
//    offset_support = OFFSET_NATIVE_SUPPORT
//    duration_support = DURATION_CONVERT_TO_OFFSET
//  }
//  deduplication_type = ASYNC
message CommandDeduplicationFeatures {
  // Feature descriptor for support for different deduplication periods
  DeduplicationPeriodSupport deduplication_period_support = 1;
  // Feature descriptor for support for participant deduplication
  // Used to adapt the conformance tests based on the deduplication type supported by the ledger
  DeduplicationType deduplication_type = 2;
}

message DeduplicationPeriodSupport {
  enum OffsetSupport {
    // The ledger natively supports deduplication periods specified as offsets.
    OFFSET_NATIVE_SUPPORT = 0;
    // The ledger doesn't natively support deduplication periods specified as offsets but it converts them into durations.
    OFFSET_CONVERT_TO_DURATION = 1;
    // The ledger does not support specifiying deduplication periods as offsets.
    OFFSET_NOT_SUPPORTED = 2;
  }
  enum DurationSupport {
    // The ledger natively support deduplication periods specified as durations.
    DURATION_NATIVE_SUPPORT = 0;
    // The ledger doesn't natively support deduplication periods specified as durations but it converts them into offsets.
    DURATION_CONVERT_TO_OFFSET = 1;
  }
  // Feature descriptor for how the ledger handles offsets as deduplication periods
  OffsetSupport offset_support = 1;
  // Feature descriptor for how the ledger handles durations as deduplication periods
  DurationSupport duration_support = 2;
}

// Ledger support for participant deduplication
enum DeduplicationType {
  // The participant does not support deduplication.
  ASYNC = 0;
  // The participant only supports deduplicating submissions that are being concurrently processed.
  ASYNC_AND_CONCURRENT_SYNC = 1;
  // The participant supports deduplication for all the submissions it receives.
  ONLY_SYNC = 2;
}
